WIP : add remote_form_for helper

--- a/core/app/views/gaku/class_groups/_form.html.slim
+++ b/core/app/views/gaku/class_groups/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @class_group, :html => {:class => 'form'}, :remote => true, :validate => true do |class_group_form|
+= remote_form_for @class_group do |class_group_form|
 
   - if class_group_form.object.new_record?
     b= t('class_group.new')
@@ -7,14 +7,14 @@
       .span12.well
         .row-fluid
           .span4
-            = class_group_form.label :grade, t('class_group.grade'), :class => "control-label pull-left"
+            /= class_group_form.label :grade, t('class_group.grade'), :class => "control-label pull-left"
             = class_group_form.number_field :grade, :class => "span12"
 
           .span4.control-group
             = class_group_form.label :name, t('class_group.name'), :class => "control-label pull-left"
             = class_group_form.text_field :name, :class => "span12"
           .span4
-            = class_group_form.label :homeroom, t('class_group.homeroom'), :class => "control-label pull-left"
+            /= class_group_form.label :homeroom, t('class_group.homeroom'), :class => "control-label pull-left"
             = class_group_form.text_field :homeroom, :class => "span12"
         .row-fluid
           .span12
