fix admission multiple logic

--- a/admissions/app/views/gaku/admin/admissions/students/_student_chooser.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/students/_student_chooser.html.slim
@@ -14,7 +14,7 @@
       tbody#students-checked
     #chosen-actions.hide
       -if !@admission.nil?
-        = form_tag( create_multiple_admin_admissions_path, :method => "post", :id => "enroll-to-course-form", :remote => true) do
+        = form_tag create_multiple_admin_admissions_path,  :id => "enroll-to-course-form", :remote => true do
           = hidden_field_tag :admission_period_id, params[:admission_period_id]
           = hidden_field_tag :admission_method_id, params[:admission_method_id]
           h4 = t("admissions.create_multiple")
