fix student creating logic

--- a/admissions/app/views/gaku/admin/admissions/student_chooser.js.erb
+++ b/admissions/app/views/gaku/admin/admissions/student_chooser.js.erb
@@ -1,2 +1,2 @@
-$('#modal-dialogs').html('<%= render_js_partial("gaku/admin/admissions/students/admission_modal") %>');
-$('#admission-modal').modal('show');
+$('#modal-dialogs').html('<%= render_js_partial("gaku/admin/admissions/students/student_modal") %>');
+$('#student-modal').modal('show');
