--- a/admissions/app/views/gaku/admin/admissions/students/_student_modal.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/students/_student_modal.html.slim
@@ -1,6 +1,6 @@
 - model = @admission || Gaku::Admission.new
 - model_class = model.class
-.modal.hide#student-modal wmode="opaque" style="display: block;padding: 41px;position: absolute;left: 500px;top: 300px;width:auto;height:auto;text-align:center;"
+.modal.hide#student-modal wmode="opaque" style="padding: 41px;position: absolute;left: 500px;top: 300px;width:auto;height:auto;text-align:center;"
   .modal-header
     button.close type="button" data-dismiss="modal"
       'x
