--- a/core/app/assets/stylesheets/gaku/gaku_core.css
+++ b/core/app/assets/stylesheets/gaku/gaku_core.css
@@ -4,6 +4,7 @@
  *= require bootstrap-responsive
  *= require tbs_datepicker/css/datepicker
  *= require jquery_validation_engine/validationEngine.jquery
+ *= require jquery.miniColors
  * require jquery.dataTables
  * require chosen
 
