[menu] add attendances types to admin types and method submenu

--- a/core/app/views/gaku/shared/menu/_admin.html.erb
+++ b/core/app/views/gaku/shared/menu/_admin.html.erb
@@ -17,6 +17,9 @@
         <li data-hook="commute_method_types">
           <%= link_to t('menu.admin.types.commute_methods'), admin_commute_method_types_path %>
         </li>
+        <li data-hook="attendance_types">
+          <%= link_to t('menu.admin.types.attendance_types'), admin_attendance_types_path %>
+        </li>
       </ul>
     </li>
 
