--- a/core/app/views/gaku/class_groups/_form.html.slim
+++ b/core/app/views/gaku/class_groups/_form.html.slim
@@ -1,25 +1,17 @@
-= remote_form_for @class_group do |class_group_form|
-
-  - if class_group_form.object.new_record?
-    b= t('class_group.new')
+= remote_form_for @class_group do |f|
   .control-group
-    .row-fluid.mt-l
-      .span12.well
-        .row-fluid
-          .span4
-            /= class_group_form.label :grade, t('class_group.grade'), :class => "control-label pull-left"
-            = class_group_form.number_field :grade, :class => "span12"
+    .span12.well
 
-          .span4.control-group
-            = class_group_form.label :name, t('class_group.name'), :class => "control-label pull-left"
-            = class_group_form.text_field :name, :class => "span12"
-          .span4
-            /= class_group_form.label :homeroom, t('class_group.homeroom'), :class => "control-label pull-left"
-            = class_group_form.text_field :homeroom, :class => "span12"
-        .row-fluid
-          .span12
-            .span6
-              = submit_button t('class_group.save'), :id => 'submit-class-group-button'
-            = link_to_cancel :id => "cancel-class-group-link"
+      .row-fluid
+        .span4
+          = f.number_field :grade, :class => "span12", :label => t('class_group.grade')
+        .span4
+          = f.text_field :name, :class => "span12", :label => t('class_group.name')
+        .span4
+          = f.text_field :homeroom, :class => "span12", :label => t('class_group.homeroom')
 
-/= javascript_include_tag 'gaku/class_groups'
+      .row-fluid
+        .span12
+          .span6
+            = submit_button t('class_group.save'), :id => 'submit-class-group-button'
+          = link_to_cancel :id => "cancel-class-group-link"
