--- a/core/app/views/gaku/students/addresses/_form.html.slim
+++ b/core/app/views/gaku/students/addresses/_form.html.slim
@@ -1,15 +1,13 @@
-= form_for [@student, @address], :remote => true do |address_form|
-  - if address_form.object.new_record?
-    b= t('address.new')
-    .row-fluid.mt-l
-      .span12.well
-        = render 'gaku/shared/form_fields/address_form_fields',  :address_form => address_form
+= remote_form_for [@student, @address] do |f|
+  .row-fluid.mt-l
+    .span12.well
+      = render 'gaku/shared/form_fields/address_form_fields',  :f => f
 
-        .row-fluid
-          .span12
-            .span6
-              = submit_button t('address.save'), :id => 'submit-student-address-button'
-            = link_to_cancel :id => 'cancel-student-address-link'
+      .row-fluid
+        .span12
+          .span6
+            = submit_button t('address.save'), :id => 'submit-student-address-button'
+          = link_to_cancel :id => 'cancel-student-address-link'
 
 /= javascript_include_tag 'gaku/students/addresses'
 /= javascript_include_tag 'gaku/shared/address'
