--- a/core/app/views/gaku/students/_student_form_fields.html.slim
+++ b/core/app/views/gaku/students/_student_form_fields.html.slim
@@ -1,47 +1,46 @@
 .row-fluid
   .span6
-    = form.label :class_group_id, t('class'), :class => "control-label"
-    = form.collection_select :class_group_ids, @class_groups, :id, :name, {:prompt => t('notice.no_resource_assign_first', :resource => t('class_group.singular'))}, {:class => 'span12'}
+    /= form.label :class_group_id, t('class'), :class => "control-label"
+    /= f.collection_select :class_group_ids, @class_groups, :id, :name, {:prompt => t('notice.no_resource_assign_first', :resource => t('class_group.singular'))}, {:class => 'span12'}, :label => t('class')
 
 .row-fluid
   .span6
-    = form.label :surname_reading, surname_reading_title, :class => "control-label pull-left"
-    = form.text_field :surname_reading, :class => "span12"
+    /= form.label :surname_reading, surname_reading_title, :class => "control-label pull-left"
+    = f.text_field :surname_reading, :class => "span12", :label => surname_reading_title
   .span6
-    = form.label :name_reading, name_reading_title, :class => "control-label pull-left"
-    = form.text_field :name_reading, :class => "span12"
-
+    /= form.label :name_reading, name_reading_title, :class => "control-label pull-left"
+    = f.text_field :name_reading, :class => "span12", :label => name_reading_title
 .row-fluid
   .span6
-    = form.label :surname, surname_reading_title, :class => "control-label pull-left"
-    = required_field
-    = form.text_field :surname, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5"
+    /= form.label :surname, surname_reading_title, :class => "control-label pull-left"
+    /= required_field
+    = f.text_field :surname, :class => "span12", :label => surname_reading_title
   .span6
-    = form.label :name, name_title, :class => "control-label pull-left"
-    = required_field
-    = form.text_field :name, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5"
-
-.row-fluid
-  .span3
-    = form.label :birth_date, t(:birth_date), :class => "control-label"
-    = form.text_field :birth_date, :class => "span12 datepicker"
-  .span3
-    = form.label :gender, t(:gender)
-    = form.select :gender, {t("gender.female") => false , t("gender.male") => true}, {:prompt => t('gender.choose'), :selected => Gaku::Preset.get('students_gender')}, :class => "span12"
-  .span3
-    = form.label :phone, t(:phone), :class => "control-label pull-left"
-    = form.text_field :phone, :class => "span12"
-  .span3
-    = form.label :email, t(:email), :class => "control-label pull-left"
-    = form.text_field :email, :class => "span12"
+    /= form.label :name, name_title, :class => "control-label pull-left"
+    /= required_field
+    = f.text_field :name, :class => "span12", :label => name_title
 
 .row-fluid
   .span3
-    = form.label :admitted, t(:admitted), :class => "control-label"
-    = form.text_field :admitted, :class => "span12 datepicker"
+    /= form.label :birth_date, t(:birth_date), :class => "control-label"
+    = f.text_field :birth_date, :class => "span12 datepicker", :label => t(:birth_date)
   .span3
-    = form.label :graduated, t(:graduated), :class => "control-label"
-    = form.text_field :graduated, :class => "span12 datepicker"
+    /= form.label :gender, t(:gender)
+    = f.select :gender, {t("gender.female") => false , t("gender.male") => true}, {:prompt => t('gender.choose'), :selected => Gaku::Preset.get('students_gender')}, :class => "span12", :label => t(:gender)
   .span3
-    = form.label :scholarship_status_id, t(:scholarship_status), :class => "control-label"
-    = select "student", "scholarship_status_id", @scholarship_statuses.collect {|p| [ p.name, p.id ] }, { :include_blank => true }, :class => "span12"
+    /= form.label :phone, t(:phone), :class => "control-label pull-left"
+    = f.text_field :phone, :class => "span12", :label => t(:phone)
+  .span3
+    /= form.label :email, t(:email), :class => "control-label pull-left"
+    = f.text_field :email, :class => "span12", :label => t(:email)
+
+.row-fluid
+  .span3
+    /= form.label :admitted, t(:admitted), :class => "control-label"
+    = f.text_field :admitted, :class => "span12 datepicker", :label => t(:admitted)
+  .span3
+    /= form.label :graduated, t(:graduated), :class => "control-label"
+    = f.text_field :graduated, :class => "span12 datepicker", :label => t(:graduated)
+  .span3
+    /= form.label :scholarship_status_id, t(:scholarship_status), :class => "control-label"
+    = select "student", "scholarship_status_id", @scholarship_statuses.collect {|p| [ p.name, p.id ] }, { :include_blank => true }, :class => "span12", :label => t(:scholarship_status)
