--- a/core/app/views/gaku/students/_student_chooser.html.slim
+++ b/core/app/views/gaku/students/_student_chooser.html.slim
@@ -2,7 +2,7 @@
 
 .row-fluid.hide#students-checked-div
   .span6.well
-    h4.pull-left = t("student.chosen_students")
+    h4.pull-left= t(:'student.chosen_students')
     h4.chosen-count.pull-left
     .table-action.show-chosen-table.pull-right = link_to t(:show),nil
     .table-action.hide-chosen-table.pull-right.hide = link_to t(:hide),nil
