--- a/core/app/views/gaku/students/_tab_menu.html.slim
+++ b/core/app/views/gaku/students/_tab_menu.html.slim
@@ -4,13 +4,13 @@
       ul.nav.nav-tabs
         li.active
           a#student-addresses-tab-link data-toggle="tab" href="#addresses"
-            = print_count(@student.addresses.count, t('address.plural'))
+            = print_count @student.addresses.count, t('address.plural')
         li
           a#student-guardians-tab-link data-toggle="tab" href="#guardians"
-            = print_count(@student.guardians.count, t('guardian.plural'))
+            = print_count @student.guardians.count, t('guardian.plural')
         li
           a#student-course-enrollments-tab-link data-toggle="tab" href="#courses"
-            = print_count(@student.courses.count, t('course.plural'))
+            = print_count @student.courses.count, t('course.plural')
       .tab-content
         #addresses.tab-pane.active
           = render :partial => 'gaku/students/addresses/addresses'
