--- a/core/app/views/gaku/students/edit.js.erb
+++ b/core/app/views/gaku/students/edit.js.erb
@@ -1,2 +1,3 @@
 $('#modal-dialogs').html("<%= render_js_partial('student_modal', {:student => @student}) %>");
 $('#edit-student-modal').modal('show');
+$('.remote-form').enableValidations();
