--- a/core/app/views/gaku/students/guardians/new_contact.js.erb
+++ b/core/app/views/gaku/students/guardians/new_contact.js.erb
@@ -1,3 +1,4 @@
 $('.modal-backdrop').remove();
 $('#guardians-modal').html('<%= render_js_partial("new_contact_modal") %>');
 $('#new-contact-modal').modal('show');
+$('.remote-form').enableValidations();
