--- a/core/app/views/gaku/students/show.html.slim
+++ b/core/app/views/gaku/students/show.html.slim
@@ -4,7 +4,7 @@
     .span10
       .row-fluid
         .span12
-          h4.mt-xs.mb-0 = t('student.show')
+          h4.mt-xs.mb-0 = t(:'student.show')
       .row-fluid
         .span12
           hr/
