--- a/core/app/views/gaku/shared/form_fields/_address_form_fields.html.slim
+++ b/core/app/views/gaku/shared/form_fields/_address_form_fields.html.slim
@@ -1,31 +1,31 @@
 .row-fluid
   .span12
-    = f.text_field :title, :class => "span12", :label => t('address.title')
+    = f.text_field :title, :class => "span12", :label => t(:'address.title')
 
 .row-fluid
   .span3
-    = f.select :country_id, @countries , { :selected => country_preset }, :id => "country_dropdown", :label => t('address.country'), :class => "span12"
+    = f.select :country_id, countries , { :selected => country_preset }, :id => "country_dropdown", :label => t(:'address.country'), :class => "span12"
   .span3
-    = f.text_field :zipcode, :class => "span12", :label => t('address.zipcode')
+    = f.text_field :zipcode, :class => "span12", :label => t(:'address.zipcode')
   .span3
-    button.span12.btn.btn-primary= t('address.search')
+    button.span12.btn.btn-primary= t(:'address.search')
 
 .row-fluid
   .span3
     /FIXME : Fix the label class
     /class state_label for handling changing state input with state dropdown/
     /= f.label :state_name, t('address.state'), :class => "control-label state_label"
-    = f.text_field :state_name, :class => "span12", :id => "state_dropdown", :value => state_preset, :label => t('address.state')
+    = f.text_field :state_name, :class => "span12", :id => "state_dropdown", :value => state_preset, :label => t(:'address.state')
   .span3
-    = f.text_field :city, :class => "span12", :value => city_preset, :label => t('address.city')
+    = f.text_field :city, :class => "span12", :value => city_preset, :label => t(:'address.city')
   .span3
-    = f.text_field :address1, :class => "span12", :label => t('address.address1')
+    = f.text_field :address1, :class => "span12", :label => t(:'address.address1')
   .span3
-    = f.text_field :address2, :class => "span12", :label => t('address.address2')
+    = f.text_field :address2, :class => "span12", :label => t(:'address.address2')
   -if params[:action] == 'edit'
     .row-fluid
       .span12
-        = f.check_box :past, :label => t('address.past')
+        = f.check_box :past, :label => t(:'address.past')
 
 javascript:
   var state_preset = '#{state_preset}'
