--- a/core/app/views/gaku/shared/form_fields/_guardian_form_fields.html.slim
+++ b/core/app/views/gaku/shared/form_fields/_guardian_form_fields.html.slim
@@ -1,19 +1,12 @@
 .row-fluid
   .span3
-    = guardian_form.label :surname, t(:name)+" ("+t(:surname)+")", :class => "control-label pull-left"
-    = required_field
-    = guardian_form.text_field :surname, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5", :value => @student.surname
+    = f.text_field :surname, :class => "span12", :value => @student.surname, :label => surname_label
   .span3
-    = guardian_form.label :name, t(:name)+" ("+t(:given_name)+")", :class => "control-label pull-left"
-    = required_field
-    = guardian_form.text_field :name, :class => "validate[required] span12", "data-prompt-position" => "bottomRight:5"
+    = f.text_field :name, :class => "span12", :label => name_label
   .span3
-    = guardian_form.label :surname_reading, t(:phonetic_reading) + " ("+t(:surname)+")", :class => "control-label pull-left"
-    = guardian_form.text_field :surname_reading, :class => "span12", :value => @student.surname_reading
+    = f.text_field :surname_reading, :class => "span12", :value => @student.surname_reading, :label => surname_reading_label
   .span3
-    = guardian_form.label :name_reading, t(:phonetic_reading) + " ("+t(:given_name)+")", :class => "control-label pull-left"
-    = guardian_form.text_field :name_reading, :class => "span12"
+    = f.text_field :name_reading, :class => "span12", :label => name_reading_label
 .row-fluid
   .span12
-    = guardian_form.label :relationship, t('guardian.relationship'), :class => "control-label"
-    = guardian_form.text_field :relationship, :class => "span12"
+    = f.text_field :relationship, :class => "span12", :label => t(:'guardian.relationship')
