--- a/core/app/views/gaku/students/_students.html.slim
+++ b/core/app/views/gaku/students/_students.html.slim
@@ -1,17 +1,17 @@
 = sortable_table_for 'students-index' do
   thead
     tr
-      = th_check_icon
-      = th t('surname')
-      = th t('name')
-      = th t('birth_date')
-      = th t('gender.label')
-      = th t('class_group.name')
-      = th t('class_group_enrollment.seat_number')
-      = th t('admitted')
-      = th t('address.primary')
+      = th_icon 'check'
+      = th t(:'surname')
+      = th t(:'name')
+      = th t(:'birth_date')
+      = th t(:'gender.label')
+      = th t(:'class_group.name')
+      = th t(:'class_group_enrollment.seat_number')
+      = th t(:'admitted')
+      = th t(:'address.primary')
 
-      - if params[:controller] == "gaku/students" or params[:controller] == "gaku/admissions"
+      - if ['gaku/students', 'gaku/admissions'].include? params[:controller]
         = th_actions 2
 
   tbody
