--- a/core/app/views/gaku/students/addresses/_form.html.slim
+++ b/core/app/views/gaku/students/addresses/_form.html.slim
@@ -6,7 +6,7 @@
       .row-fluid
         .span12
           .span6
-            = submit_button t('address.save'), :id => 'submit-student-address-button'
+            = submit_button t(:'address.save'), :id => 'submit-student-address-button'
           = link_to_cancel :id => 'cancel-student-address-link'
 
 /= javascript_include_tag 'gaku/students/addresses'
