--- a/core/app/views/gaku/students/contacts/_contacts.html.slim
+++ b/core/app/views/gaku/students/contacts/_contacts.html.slim
@@ -5,21 +5,19 @@
       = count_div 'student-contacts-count' do
         = print_count(@student.contacts.count, t_contact_list)
     .pull-right
-        = ajax_link_to_new t('contact.add'), [:new, @student, :contact], :id => 'new-student-contact-link'
+        = ajax_link_to_new t(:'contact.add'), [:new, @student, :contact], :id => 'new-student-contact-link'
+
   .row-fluid
     hr
   .row-fluid
     = table_for 'student-contacts-index' do
       thead
         tr
-          = th_check_icon
-          = th t('contact_type.singular')
-          = th t('contact.data')
-          = th t('contact.details')
-          = th t('contact.emergency')
+          = th_icon 'check'
+          = th t(:'contact_type.singular')
+          = th t(:'contact.data')
+          = th t(:'contact.details')
+          = th t(:'contact.emergency')
           = th_actions 2
       tbody
         = render :partial => 'gaku/students/contacts/contact', :collection => @student.contacts, :as => 'contact'
-    br/
-    /#new-student-contact-form-errors
-    #new-student-contact-form
