--- a/core/app/views/gaku/students/contacts/edit.js.erb
+++ b/core/app/views/gaku/students/contacts/edit.js.erb
@@ -1,2 +1,3 @@
 $('#modal-dialogs').html('<%== render_js_partial("contact_modal", {:note => @note}) %>');
 $('#edit-contact-modal').modal('show');
+$('.remote-form').enableValidations();
