--- a/core/app/views/gaku/students/course_enrollments/create.js.erb
+++ b/core/app/views/gaku/students/course_enrollments/create.js.erb
@@ -5,5 +5,5 @@ $('#new-student-course-enrollment').slideToggle();
 $('#new-student-course-enrollment-link').show();
 
 showNotice("<%= render_flash %>");
-$('#student-course-enrollments-tab-link').html("<%= print_count(@student.courses.count, t('course.plural')) %>");
-$('.student-course-enrollments-count').html("<%= print_count(@student.courses.count, t('course.list')) %>");
+$('#student-course-enrollments-tab-link').html("<%= print_count(@count+1, t_course_plural) %>");
+$('.student-course-enrollments-count').html("<%= print_count(@count+1, t_course_list) %>");
