--- a/core/app/views/gaku/students/course_enrollments/new.js.erb
+++ b/core/app/views/gaku/students/course_enrollments/new.js.erb
@@ -1,2 +1,3 @@
 $('#new-student-course-enrollment').html('<%= render_js_partial("form") %>').slideToggle();
 $('#new-student-course-enrollment-link').hide();
+$('.remote-form').enableValidations();
