--- a/core/app/views/gaku/students/guardians/_guardian_modal.html.slim
+++ b/core/app/views/gaku/students/guardians/_guardian_modal.html.slim
@@ -1,21 +1,13 @@
-- model = @guardian || Gaku::Guardian.new
-- model_class = model.class
-.modal.hide#edit-guardian-modal wmode="opaque"
-  
-  = form_for([@student, model], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal' }) do |guardian_form|
-    .modal-header
-      button.close type="button" data-dismiss="modal"
-        'x
-      h3 = t('guardian.edit')
+= modal_for 'edit-guardian-modal' do
+  = modal_header t(:'guardian.edit')
+  = modal_form_for [@student, @guardian] do |f|
     .modal-body
-      .validation-error
       .form-inputs
         = hidden_field_tag :student_id, @student.id
         .row-fluid.control-group
-          
-          = render 'gaku/shared/form_fields/guardian_form_fields', :guardian_form => guardian_form
-
+          = render 'gaku/shared/form_fields/guardian_form_fields', :f => f
         .row-fluid style="margin-top:10px"
-          .span8
-            = guardian_form.submit t('guardian.save'), :class => "span12 btn btn-primary", :id => 'submit-student-guardian-button', :style => "min-height:0px; float: left;"
+          .span12
+            .span9
+              = submit_button t(:'guardian.save'), :id => 'submit-student-guardian-button'
             = link_to_cancel  :id => 'cancel-student-guardian-link'
