--- a/core/app/views/gaku/students/guardians/addresses/_form.html.slim
+++ b/core/app/views/gaku/students/guardians/addresses/_form.html.slim
@@ -1,14 +1,12 @@
-= form_for [@student, @guardian, @address], :remote => true do |address_form|
-  - if address_form.object.new_record?
-    b= t('address.new')
-    .row-fluid.mt-l
-      .span12.well
-        = render 'gaku/shared/form_fields/address_form_fields', :address_form => address_form
-        .row-fluid
-          .span12
-            .span6
-              = submit_button t('address.save'), :id => 'submit-student-guardian-address-button'
-            = link_to_cancel :id => 'cancel-student-guardian-address-link'
+= remote_form_for [@student, @guardian, @address] do |f|
+  .row-fluid.mt-l
+    .span12.well
+      = render 'gaku/shared/form_fields/address_form_fields', :f => f
+      .row-fluid
+        .span12
+          .span9
+            = submit_button t(:'address.save'), :id => 'submit-student-guardian-address-button'
+          = link_to_cancel :id => 'cancel-student-guardian-address-link'
 
 /= javascript_include_tag 'gaku/students/guardians/addresses'
 /= javascript_include_tag 'gaku/shared/address'
