--- a/core/app/views/gaku/students/guardians/addresses/new.js.erb
+++ b/core/app/views/gaku/students/guardians/addresses/new.js.erb
@@ -1,2 +1,3 @@
 $('#new-student-guardian-address').html('<%= render_js_partial("form") %>').slideDown();
 $('#new-student-guardian-address-link').hide();
+$('.remote-form').enableValidations();
