--- a/core/app/views/gaku/students/guardians/contacts/_contact_modal.html.slim
+++ b/core/app/views/gaku/students/guardians/contacts/_contact_modal.html.slim
@@ -1,6 +1,4 @@
-#edit-contact-modal.modal.hide
-  .modal-header
-    button type="button" class="close" data-dismiss="modal" ×
-    h1 = t('contact.edit')
+= modal_for 'edit-contact-modal' do
+  = modal_header t(:'contact.edit')
   .modal-body
-  	=render 'form', :contact => @contact
+    = render 'form', :locals => {:f => @contact}
