--- a/core/app/views/gaku/admin/schools/campuses/addresses/_addresses.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/addresses/_addresses.html.slim
@@ -3,23 +3,23 @@
   .row-fluid
     .pull-left
       h4.h4-vm
-        = t('address.singular')
+        = t(:'address.singular')
     .pull-right
-      = ajax_link_to_new t('address.add'), new_admin_school_campus_address_path(@school, @campus), :id => 'new-admin-school-campus-address-link', :class => @campus.address.nil? ? "btn btn-primary" : 'btn btn-primary hide'
+      = ajax_link_to_new t(:'address.add'), [:new, :admin, @school, @campus, :address], :id => 'new-admin-school-campus-address-link', :class => @campus.address.nil? ? "btn btn-primary" : 'btn btn-primary hide'
 
   .row-fluid
     .span12
-      table#admin-school-campus-addresses-index.index.table.table-striped.table-bordered.table-condensed
+      = table_for 'admin-school-campus-addresses-index' do
           thead
             tr
-              th.btn-inverse = t('address.title')
-              th.btn-inverse = t('address.country')
-              th.btn-inverse = t('address.zipcode')
-              th.btn-inverse = t('address.state')
-              th.btn-inverse = t('address.city')
-              th.btn-inverse = t('address.address1')
-              th.btn-inverse = t('address.address2')
-              th.btn-info style="width:61px" = t('manage')
+              = th t(:'address.title')
+              = th t(:'address.country')
+              = th t(:'address.zipcode')
+              = th t(:'address.state')
+              = th t(:'address.city')
+              = th t(:'address.address1')
+              = th t(:'address.address2')
+              = th_actions 2
           tbody
-            =render :partial => 'gaku/admin/schools/campuses/addresses/address', :locals => {:address => @campus.address}
+            = render :partial => 'gaku/admin/schools/campuses/addresses/address', :locals => {:address => @campus.address}
 br/
