--- a/core/app/views/gaku/admin/schools/campuses/contacts/new.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/new.js.erb
@@ -2,3 +2,4 @@ $('#new-admin-school-campus-contact').html('<%= render_js_partial("form", { :sch
 
 $('#new-admin-school-campus-contact').show();
 $('#new-admin-school-campus-contact-link').hide();
+$('.remote-form').enableValidations();
