--- a/core/app/views/gaku/admin/schools/new.js.erb
+++ b/core/app/views/gaku/admin/schools/new.js.erb
@@ -1,2 +1,3 @@
 $('#new-admin-school').html('<%= render_js_partial("form") %>').slideDown();
 $('#new-admin-school-link').hide();
+$('.remote-form').enableValidations();
