--- a/core/app/views/gaku/admin/schools/campuses/_campus_modal.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/_campus_modal.html.slim
@@ -1,18 +1,10 @@
-#edit-campus-modal.modal.hide wmode="opaque"
-
-  = form_for([:admin, @school, @campus], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal' }) do |campus_form|
-
-      .modal-header
-        button.close type="button" data-dismiss="modal"
-          'x
-        h3 = t('campus.edit')
-      .modal-body
-        .row-fluid
-          #validation-errors
-        .row-fluid
-          = campus_form.label :name, t('campus.name')
-          = campus_form.text_field :name, :class => "span12"
-        .row-fluid
-          .span9
-            =submit_button t('campus.save'), :id => 'submit-admin-school-campus-button', :class => 'btn btn-primary button span12'
-          = link_to_cancel :id => 'cancel-admin-school-campus-link'
+= modal_for 'edit-campus-modal' do
+  = modal_header t(:'campus.edit')
+  = modal_form_for [:admin, @school, @campus] do |f|
+    .modal-body
+      .row-fluid
+        = f.text_field :name, :class => "span12", :label => t(:'campus.name')
+      .row-fluid
+        .span9
+          = submit_button t('campus.save'), :id => 'submit-admin-school-campus-button'
+        = link_to_cancel :id => 'cancel-admin-school-campus-link'
