--- a/core/app/views/gaku/admin/schools/campuses/_campuses.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/_campuses.html.slim
@@ -2,19 +2,18 @@
   .row-fluid
     #new-admin-school-campus.hide
     .pull-left
-      h4.h4-vm.admin-school-campuses-count
-        = print_count(@school.campuses.count, t_campus_list)
+      = count_div 'admin-school-campuses-count' do
+        = print_count @school.campuses.count, t_campus_list
     .pull-right
-      = ajax_link_to_new t('campus.add'), new_admin_school_campus_path(@school), :id => 'new-admin-school-campus-link'
+      = ajax_link_to_new t(:'campus.add'), [:new, :admin, @school, :campus], :id => 'new-admin-school-campus-link'
 
   .row-fluid
     .span12
-      table#admin-school-campuses-index.index.table.table-striped.table-bordered.table-condensed
+      = table_for 'admin-school-campuses-index' do
           thead
             tr
-              th.btn-inverse style="width:28px"
-                i.icon-white.icon-home
-              th.btn-inverse = t('campus.name')
-              th.btn-info style="width:90px" = t('manage')
+              = th_icon 'home'
+              = th t(:'campus.name')
+              = th_actions 3
           tbody
-            =render :partial => 'gaku/admin/schools/campuses/campus', :collection => @school.campuses, :as => 'campus'
+            = render :partial => 'gaku/admin/schools/campuses/campus', :collection => @school.campuses, :as => 'campus'
