--- a/core/app/views/gaku/admin/schools/campuses/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/_form.html.slim
@@ -1,14 +1,13 @@
-= form_for [:admin, @school, @campus], :remote => true do |campus_form|
-  b= t('campus.new')
+= remote_form_for [:admin, @school, @campus] do |f|
+  b= t(:'campus.new')
   .row-fluid.mt-l
     .span12.well
       .span12.well
-        = campus_form.label :name
-        = campus_form.text_field :name, :class => "span12"
+        = f.text_field :name, :class => "span12", :label => t(:'campus.name')
         .row-fluid
           .span12
-            .span6
-              = submit_button t('campus.save'), :id => 'submit-admin-school-campus-button'
+            .span9
+              = submit_button t(:'campus.save'), :id => 'submit-admin-school-campus-button'
             = link_to_cancel :id => 'cancel-admin-school-campus-link'
 
 /= javascript_include_tag 'gaku/admin/schools/campuses'
