--- a/core/app/views/gaku/admin/schools/campuses/addresses/_address_modal.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/addresses/_address_modal.html.slim
@@ -1,18 +1,12 @@
-.modal.hide#edit-address-modal wmode="opaque"
-  = form_for [:admin, @school, @campus, @address], :remote => true, :html => { :'data-type' => 'script', :class => 'form-horizontal' } do |address_form|
-
-      .modal-header
-        button.close type="button" data-dismiss="modal"
-          'x
-        h3 = t('address.edit')
-      .modal-body
-        .row-fluid
-          .validation-error
-        .row-fluid
-          = hidden_field_tag :campus_id, @campus.id
-
-        = render 'shared/form_fields/address_form_fields', :address_form => address_form
-        .row-fluid
+= modal_for 'edit-address-modal' do
+  = modal_header t(:'address.edit')
+  = modal_form_for [:admin, @school, @campus, @address] do |f|
+    .modal-body
+      .row-fluid
+        = hidden_field_tag :campus_id, @campus.id
+        = render 'gaku/shared/form_fields/address_form_fields', :f => f
+      .row-fluid
+        .span12
           .span9
             = submit_button t('address.save'), :id => 'submit-admin-school-campus-address-button'
-            = link_to_cancel :id => 'cancel-admin-school-campus-address-link'
+          = link_to_cancel :id => 'cancel-admin-school-campus-address-link'
