--- a/core/app/views/gaku/admin/schools/campuses/addresses/edit.js.erb
+++ b/core/app/views/gaku/admin/schools/campuses/addresses/edit.js.erb
@@ -1,2 +1,3 @@
 $('#modal-dialogs').html('<%= render_js_partial("address_modal", {:address => @campus.address}) %>');
 $('#edit-address-modal').modal('show');
+$('.remote-form').enableValidations();
