--- a/core/app/views/gaku/admin/schools/campuses/contacts/_contact_modal.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/contacts/_contact_modal.html.slim
@@ -1,18 +1,13 @@
-- model = @contact || Contact.new
-- model_class = model.class
-.modal.hide#edit-contact-modal wmode="opaque"
-
-  = form_for([:admin, @campus.school, @campus, model], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal' }) do |contact_form|
-    .modal-header
-      button.close type="button" data-dismiss="modal"
-        'x
-      h3= t('contact.edit')
+= modal_for 'edit-contact-modal' do
+  = modal_header t(:'contact.edit')
+  = modal_form_for [:admin, @campus.school, @campus, @contact] do |f|
     .modal-body
-      .validation-error
-      .form-inputs
+      .row-fluid
         = hidden_field_tag :campus_id, @campus.id
+        = render 'gaku/shared/form_fields/contact_form_fields', :f => f
 
-        = render 'gaku/shared/form_fields/contact_form_fields', :contact_form => contact_form
-        .row-fluid
-          = submit_button t('contact.save'), :id => 'submit-admin-school-campus-contact-button', :class => 'btn btn-primary'
-          = link_to_cancel :id => 'cancel-admin-school-campus-contact-link', :class => 'btn'
+      .row-fluid
+        .span12
+          .span9
+            = submit_button t(:'contact.save'), :id => 'submit-admin-school-campus-contact-button'
+          = link_to_cancel :id => 'cancel-admin-school-campus-contact-link'
