--- a/core/app/views/gaku/admin/schools/campuses/show.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/show.html.slim
@@ -1,6 +1,6 @@
 .row-fluid
   .span12.well
-    table.table.table-bordered.table-striped
+    = table do
       tbody
         tr
           td = @campus.name
