--- a/core/app/views/gaku/admin/schools/edit.js.erb
+++ b/core/app/views/gaku/admin/schools/edit.js.erb
@@ -1,2 +1,3 @@
 $('#modal-dialogs').html('<%= render_js_partial("school_modal", {:school => @school}) %>');
 $('#edit-school-modal').modal('show');
+$('.remote-form').enableValidations();
