--- a/core/app/views/gaku/admin/contact_types/_contact_type_modal.html.slim
+++ b/core/app/views/gaku/admin/contact_types/_contact_type_modal.html.slim
@@ -1,19 +1,10 @@
-- model = @contact_type || ContactType.new
-- model_class = model.class
-#edit-contact-type-modal.modal.hide wmode="opaque"
-
-  = form_for [:admin, model], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal'} do |contact_type_form|
-
-      .modal-header
-        button type="button" class="close" data-dismiss="modal" ×
-        h3 = t('contact_type.edit')
-      .modal-body
-        .row-fluid
-          #validation-errors
-        .row-fluid
-          = contact_type_form.label :name, t('contact_type.name')
-          = contact_type_form.text_field :name, :class => "span12"
-        .row-fluid
-          .span9
-            =submit_button t('contact_type.save'), :id => 'submit-admin-contact-type-button'
-          = link_to_cancel :id => 'cancel-admin-contact-type-link'
+= modal_for 'edit-contact-type-modal' do
+  = modal_header t(:'contact_type.edit')
+  = modal_form_for [:admin, @contact_type] do |f|
+    .modal-body
+      .row-fluid
+        = f.text_field :name, :class => "span12", :label => t(:'contact_type.name')
+      .row-fluid
+        .span9
+          = submit_button t(:'contact_type.save'), :id => 'submit-admin-contact-type-button'
+        = link_to_cancel :id => 'cancel-admin-contact-type-link'
