--- a/core/app/views/gaku/admin/enrollment_status_types/new.js.erb
+++ b/core/app/views/gaku/admin/enrollment_status_types/new.js.erb
@@ -1,2 +1,3 @@
 $('#new-admin-enrollment-status-type').html('<%= render_js_partial("form") %>').slideDown();
 $('#new-admin-enrollment-status-type-link').hide();
+$('.remote-form').enableValidations();
