[spec/requests] Refactor admin/attendance_types

--- a/core/app/views/gaku/admin/attendance_types/_attendance_type_modal.html.slim
+++ b/core/app/views/gaku/admin/attendance_types/_attendance_type_modal.html.slim
@@ -1,33 +1,10 @@
-#edit-attendance-type-modal.modal.hide wmode="opaque"
-
-  = form_for [:admin, @attendance_type], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal'} do |attendance_type_form|
-
-      .modal-header
-        button.close type="button" data-dismiss="modal"
-          'x
-        h3 = t('attendance_type.edit')
-      .modal-body
-        .row-fluid
-          #validation-errors
-        .row-fluid
-          = attendance_type_form.label :name, t('attendance_type.name')
-          = attendance_type_form.text_field :name, :class => "span12"
-
-          = attendance_type_form.label :color_code
-          = attendance_type_form.text_field :color_code, :class => 'span 12'
-
-          = attendance_type_form.label :credit_rate
-          = attendance_type_form.text_field :credit_rate, :class => 'span 12'
-
-          = attendance_type_form.label :counted_absent
-          = attendance_type_form.check_box :counted_absent
-
-          = attendance_type_form.label :disable_credit
-          = attendance_type_form.check_box :disable_credit
-
-          = attendance_type_form.label :auto_credit
-          = attendance_type_form.check_box :auto_credit
-        .row-fluid
-          .span9
-            =submit_button t('attendance_type.save'), :id => 'submit-admin-attendance-type-button'
-          = link_to_cancel :id => 'cancel-admin-attendance-type-link'
+= modal_for 'edit-attendance-type-modal' do
+  = modal_header t(:'attendance_type.edit')
+  = modal_form_for [:admin, @attendance_type] do |f|
+    .modal-body
+      .row-fluid
+        = render 'form_fields', :f => f
+      .row-fluid
+        .span9
+          = submit_button t(:'attendance_type.save'), :id => 'submit-admin-attendance-type-button'
+        = link_to_cancel :id => 'cancel-admin-attendance-type-link'
