--- a/core/app/views/gaku/admin/commute_method_types/new.js.erb
+++ b/core/app/views/gaku/admin/commute_method_types/new.js.erb
@@ -1,2 +1,3 @@
 $('#new-admin-commute-method-type').slideDown();
 $('#new-admin-commute-method-type-link').hide();
+$('.remote-form').enableValidations();
