--- a/core/app/views/gaku/admin/commute_method_types/edit.js.erb
+++ b/core/app/views/gaku/admin/commute_method_types/edit.js.erb
@@ -1,2 +1,3 @@
 $('#modal-dialogs').html('<%= render_js_partial("commute_method_type_modal", {:commute_method_type => @commute_method_type}) %>');
 $('#edit-commute-method-type-modal').modal('show');
+$('.remote-form').enableValidations();
